--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -31,7 +31,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <title>Shibarium BOT</title>
+    <meta
+      name="description"
+      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐"
+    />
+    <meta property="og:title" content="Shibarium BOT" />
+    <meta
+      property="og:description"
+      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐"
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="%PUBLIC_URL%/thumb.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Shibarium BOT" />
+    <meta
+      name="twitter:description"
+      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐"
+    />
+    <meta name="twitter:site" content="@" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/thumb.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
