--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -20,8 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -35,26 +33,22 @@
     <title>Shibarium BOT</title>
     <meta
       name="description"
-      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐"
-    />
+      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐" />
     <meta property="og:title" content="Shibarium BOT" />
     <meta
       property="og:description"
-      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐"
-    />
+      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐" />
     <meta
       property="og:image"
       itemprop="image"
-      content="%PUBLIC_URL%/thumb.png"
-    />
+      content="%PUBLIC_URL%/thumb.jpeg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Shibarium BOT" />
     <meta
       name="twitter:description"
-      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐"
-    />
+      content="An innovative trading tool designed to enhance your experience on the Shibarium ecosystem - Layer 2 of $SHIB 🪐" />
     <meta name="twitter:site" content="@" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/thumb.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/thumb.jpeg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
